Fog and red tanks